Trying to fix "no session" problem. Is it server problem?..